<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:gravity="left" 
    android:background="#000000"
    android:orientation="vertical" >"
<!-- 宽度 高三个值 -->
    <TextView
        android:id="@+id/hm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        tools:context=".MainActivity" 
        android:textSize="30sp"
        android:textColor="#f00"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web"
        android:autoLink="web"
        android:background="@drawable/a"
        tools:context=".MainActivity" />
    <!-- web。。。超链接 -->
    <!-- @string/。。。。是定义布局属性的唯一方式 -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:autoLink="phone"
        tools:context=".MainActivity" 
        android:background="#00ff00"/>
    
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input"/>"
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:autoLink="email" />"

</LinearLayout>